fix: change overflow in explorer plugin from scroll to auto

--- a/packages/dm-core-plugins/src/explorer/style.css
+++ b/packages/dm-core-plugins/src/explorer/style.css
@@ -1,3 +1,3 @@
 body .lm_content {
-  overflow: scroll;
+  overflow: auto;
 }
